fix overlaping ui

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <span class="title">Jeu de la vie</span>
       <button id="btnPause">Pause</button>
       <button id="btnStart">Start</button>
     </header>
 
-    <section class="playground">
+    <section id="playground" class="playground">
     </section>
-    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+
+<script type="module" src="/src/main.ts"></script>
